<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".controller.main.calendar.Add_Medicine_Page"
    android:id="@+id/Add_Medicine_Page">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/upper_bar_sub"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_left_arrow"
            android:rotationY="@integer/angle_rtl_180"/>


        <TextView
            android:id="@+id/Add_Medicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/AddMed"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:id="@+id/NameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_below="@id/NameTV"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameTV" />


    <ImageView
        android:id="@+id/calIcon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateTV" />

    <TextView
        android:id="@+id/DateTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameET"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET" />

    <Button
        android:id="@+id/MFromDays"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_edit_text"
        android:elevation="0dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/SetDayApp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calIcon"
        app:layout_constraintTop_toBottomOf="@+id/DateTV" />

    <!--<TextView
        android:id="@+id/dash"
        android:layout_width="27dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=" - "
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/MTillDays"
        app:layout_constraintStart_toEndOf="@+id/MFromDays"
        app:layout_constraintTop_toBottomOf="@+id/DateTV" />-->

    <!--<Button
        android:id="@+id/MTillDays"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_edit_text"
        android:elevation="0dp"
        android:fontFamily="@font/montserrat"
        android:text="End"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateTV" />-->


    <TextView
        android:id="@+id/TimeTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/MFromDays"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/STMed"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MFromDays" />


    <ImageView
        android:id="@+id/cloIcon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_clock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimeTV" />

    <Button
        android:id="@+id/MTime"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/montserrat"
        android:text="@string/SetTimeApp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cloIcon"
        app:layout_constraintTop_toBottomOf="@+id/TimeTV" />

    <TextView
        android:id="@+id/DoseTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/MFromDays"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/DoseMed"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MTime" />


    <ImageView
        android:id="@+id/pillIcon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_tablet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DoseTV" />

    <EditText
        android:id="@+id/MedicineDose"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:hint="@string/SetDoseMed"
        android:inputType="number"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cloIcon"
        app:layout_constraintTop_toBottomOf="@+id/DoseTV" />


    <TextView
        android:id="@+id/RepeatView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/MedicineDose"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/RepMed"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pillIcon" />

    <Spinner
        android:id="@+id/repeatType"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_below="@id/RepeatView"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/darkAccent"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/repeatInterval"
        app:layout_constraintTop_toBottomOf="@+id/RepeatView" />

    <ImageView
        android:id="@+id/repeatIcon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_repeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RepeatView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RepeatView"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/EvMed"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/repeatIcon"
        app:layout_constraintTop_toBottomOf="@+id/RepeatView" />

    <EditText
        android:id="@+id/repeatInterval"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/RepeatView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/timesMed"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/repeatNO"
        app:layout_constraintTop_toBottomOf="@+id/repeatType" />

    <EditText
        android:id="@+id/repeatNO"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/repeatInterval" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/main_button"
        android:fontFamily="@font/montserrat"
        android:padding="3dp"
        android:text="@string/SaveApp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatNO" />

</androidx.constraintlayout.widget.ConstraintLayout>