...
    <string name="STMed">Time of first reminder</string>
    <string name="DoseMed">Dose</string>
    <string name="SetDoseMed">Set Dose</string>
    <string name="RepMed">Repeat</string>
    <string name="EvMed">Every</string>
    <string name="timesMed">times</string>
    <string name="MedSavedSuccess">The Medicine Reminder Saved Successfully</string>
    <string name="MedSavedFialed">The Medicine Reminder Did not Saved, Try Again</string>

    <!-- Delete Med Reminder Page -->
    <string name="MedDetails">Medicine</string>
    <string name="DeleteMed">Delete Medicine</string>
    <string name="DeleteMessageMed">Are you sure you want to delete this Medicine Reminder ? </string>
...
